<resources>

    <!-- High Ground -->
    <string name="app_name">EmergenZ</string>
    <string name="icon_call">Call</string>
    <string name="icon_telp_card">Emergency Icon</string>
    <string name="icon_article_card">Article Icon</string>
    <string name="icon_bar">Icon Bar</string>
    <string name="label_call">Home</string>
    <string name="label_contact">Contact</string>
    <string name="label_article">Article</string>
    <string name="fragment_contact">Fragment Contact</string>
    <string name="fragment_article">Fragment Article</string>
    <string name="message_alert">Are you sure you want to call this number?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="logo_splashscreen">Splashscreen Logo</string>
    <string name="panic_button_desc">Panic Button</string>
    <string name="panic_button_label">Press 3 times to search the nearest emergency number</string>
    <string name="title_activity_settings">Settings</string>
    <string name="id_image">Identification Card Picture</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>

    <!-- Login & Register -->
    <string name="pw_warning">Password must at least contains 8 characters!</string>
    <string name="pw_hint">Enter your password</string>
    <string name="email_hint">writeemail@place.com</string>
    <string name="email_warning">Email is not valid!</string>
    <string name="name_hint">Enter your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now_text">Not a member? Register here!</string>
    <string name="login_now_text">Already a member? Login here!</string>
    <string name="logo_description">EmergenZ\'s Logo</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="username_hint">Enter your username</string>
    <string name="email_empty">Email is empty!</string>
    <string name="pw_empty">Password is empty!</string>
    <string name="username_empty">Username is empty!</string>

    <!-- Profile -->
    <string name="takepic_fail">Failed to take a picture</string>
    <string name="camera_fail">Failed to get the camera</string>
    <string name="btn_take_a_photo">Take a Photo</string>
    <string name="capture_image">Capture the Image</string>
    <string name="iv_setting">Setting</string>
    <string name="iv_profile">Profile</string>
    <string name="iv_pfp">Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="change_detail">Change your detail</string>
    <string name="nik">NIK</string>
    <string name="apply">Apply</string>
    <string name="perm_lack">Permission not granted</string>
    <string name="address">Address</string>
    <string name="field_empty">Not filled in</string>
    <string name="gender">Gender</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="full_name">EmergenZ\'s Guest</string>
    <string name="iv_identity_card_cd">Image Container for your ID Card</string>
    <string name="full_name_field">Full Name</string>
    <string name="id_card">Id Card</string>
    <string name="img_lack">Upload your image first</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="about_header">About</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Theme</string>
    <string name="about_title">Version</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="note_card_urgent">*Can only be used on certain cities</string>
    <string name="exit">Press again to exit</string>
    <string name="retry">Retry</string>
    <string name="location_fail">Failed to retrieve location.</string>
    <string name="full_name_empty">Fullname is empty!</string>
    <string name="nik_empty">NIK is empty!</string>
    <string name="province_empty">Province is empty!</string>
    <string name="city_empty">City is empty!</string>
    <string name="address_empty">Address is empty!</string>
    <string name="detail_empty">Please fill your details!</string>
    <string name="label_history">History</string>
    <string name="history_not_found">History not found.</string>
</resources>