<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo_description"
            android:scaleType="fitCenter"
            android:src="@drawable/emergenz_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ed_register_username"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="354dp"
            android:layout_height="50dp"
            android:alpha="0"
            android:background="@drawable/border_black"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:importantForAutofill="no"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:alpha="1" />

        <com.bangkit.emergenz.util.customview.EmailEditText
            android:id="@+id/ed_register_email"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="354dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:alpha="0"
            android:background="@drawable/border_black"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            tools:alpha="1" />

        <com.bangkit.emergenz.util.customview.PasswordEditText
            android:id="@+id/ed_register_password"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="354dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:alpha="0"
            android:background="@drawable/border_black"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            tools:alpha="1" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="@+id/ed_register_username"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/ed_register_email"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_username" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/ed_register_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_now" />

        <TextView
            android:id="@+id/tv_login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_now_text"
            android:textColor="@color/blue_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

        <ProgressBar
            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>