<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    app:cardBackgroundColor="@color/bg_card"
    app:cardCornerRadius="20dp">
    
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/test"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/message_alert"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_yes"
                android:textAllCaps="false"
                android:text="@string/btn_yes"
                android:backgroundTint="#a4a4a4"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_no"
                android:textAllCaps="false"
                android:text="@string/btn_no"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>