<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_telp_card"
            android:scaleType="centerCrop"
            android:background="@drawable/ic_emergency"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/iv_user_photo"
            android:maxLines="1"
            android:textSize="15sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toStartOf="@+id/iv_call"
            card_view:layout_constraintStart_toEndOf="@+id/iv_user_photo"
            card_view:layout_constraintTop_toTopOf="@+id/iv_user_photo"
            tools:text="Nomor Darurat 112" />

        <TextView
            android:id="@+id/tv_number_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="12sp"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name_place"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name_place"
            tools:text="112" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:text="@string/note_card_urgent"
            android:textColor="@android:color/holo_red_light"
            android:textSize="11sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/tv_number_phone" />

        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_call"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_call"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
